// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpponentBoardPreview /> does not render if no opponents 1`] = `""`;

exports[`<OpponentBoardPreview /> renders current player if includeCurrentPlayer 1`] = `
<Stack
  width="300px"
>
  <PlayerPreview
    board={{}}
    hand={[]}
    tileSize={15}
  />
  <HStack
    spacing={4}
    width="100%"
  >
    <Text
      textAlign="center"
      width="100%"
    >
      username
    </Text>
  </HStack>
</Stack>
`;

exports[`<OpponentBoardPreview /> renders empty board and hand when selectedIndex is out of bounds 1`] = `
<Stack
  width="300px"
>
  <PlayerPreview
    board={{}}
    hand={[]}
    tileSize={15}
  />
  <HStack
    spacing={4}
    width="100%"
  >
    <Text
      textAlign="center"
      width="100%"
    >
      username
    </Text>
  </HStack>
</Stack>
`;

exports[`<OpponentBoardPreview /> renders properly with multiple opponents 1`] = `
<Stack
  width="300px"
>
  <PlayerPreview
    board={{}}
    hand={[]}
    tileSize={15}
  />
  <HStack
    spacing={4}
    width="100%"
  >
    <IconButton
      aria-label="See previous opponent's board"
      icon={<FaChevronLeft />}
      onClick={[MockFunction handleLeftClick]}
      size="sm"
      variant="outline"
    />
    <Select
      onChange={[MockFunction handleSelectedPlayerChange]}
      size="sm"
      value="opponent"
    >
      <option
        key="opponent"
        value="opponent"
      >
        username
      </option>
      <option
        key="opponent2"
        value="opponent2"
      >
        username
      </option>
    </Select>
    <IconButton
      aria-label="See next opponent's board"
      icon={<FaChevronRight />}
      onClick={[MockFunction handleRightClick]}
      size="sm"
      variant="outline"
    />
  </HStack>
</Stack>
`;

exports[`<OpponentBoardPreview /> renders properly with one opponent 1`] = `
<Stack
  width="300px"
>
  <PlayerPreview
    board={{}}
    hand={[]}
    tileSize={15}
  />
  <HStack
    spacing={4}
    width="100%"
  >
    <Text
      textAlign="center"
      width="100%"
    >
      username
    </Text>
  </HStack>
</Stack>
`;
